lib_LIBRARIES = libtdse.a
nobase_pkginclude_HEADERS = glm.h physics.h ship.h controller.h biped.h projectile.h shooter.h turret.h
libtdse_a_SOURCES = glm.cpp physics.cpp ship.cpp controller.cpp biped.cpp projectile.cpp shooter.cpp turret.cpp
libtdse_a_CPPFLAGS = $(BOOST_CPPFLAGS) $(PTHREAD_CFLAGS) $(Bullet_CFLAGS)
